--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,8 +35,10 @@
         <item name="android:paddingBottom">10dp</item>
         <item name="android:paddingRight">10dp</item>
         <item name="android:paddingTop">10dp</item>
+        <item name="android:layout_margin">5dp</item>
         <item name="android:maxLength">20</item>
         <item name="android:maxLines">1</item>
+        <item name="android:background">@drawable/select_text</item>
     </style>
     <!--字体-->
     <style name="inputTextStyle">
