--- a/app/src/main/res/layout/order_has_pay_item_.xml
+++ b/app/src/main/res/layout/order_has_pay_item_.xml
@@ -119,6 +119,7 @@
                 android:text="按钮1"
                 android:background="@drawable/order_edit_btn"
                 android:layout_marginLeft="10dp"
+                android:layout_marginBottom="4dp"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"/>
@@ -127,6 +128,7 @@
                 android:text="按钮2"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
+                android:layout_marginBottom="4dp"
                 android:background="@drawable/order_edit_btn"
                 android:layout_weight="1"
                 android:layout_width="0dp"
