--- a/app/src/main/res/layout/tab_item_view.xml
+++ b/app/src/main/res/layout/tab_item_view.xml
@@ -8,8 +8,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <ImageView
         android:id="@+id/home_fragment_button"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:focusable="false"
-        android:scaleType="centerInside"
-        android:layout_height="45dp" />
+        android:scaleType="fitXY"
+        android:layout_height="35dp" />
 </LinearLayout>
