--- a/app/src/main/res/layout/gif_wait.xml
+++ b/app/src/main/res/layout/gif_wait.xml
@@ -4,9 +4,7 @@
                 android:background="#602b2a2a"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:fresco="http://schemas.android.com/apk/res-auto"
-                xmlns:app="http://schemas.android.com/tools">
+                xmlns:android="http://schemas.android.com/apk/res/android">
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/good_detail_waitGif"
         android:layout_width="150dp"
