--- a/app/src/main/res/layout/order_has_pay_item_.xml
+++ b/app/src/main/res/layout/order_has_pay_item_.xml
@@ -3,14 +3,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
-                xmlns:fresco="http://schemas.android.com/apk/res-auto"
-                xmlns:app="http://schemas.android.com/tools">
+                xmlns:fresco="http://schemas.android.com/apk/res-auto">
     <com.facebook.drawee.view.SimpleDraweeView
         android:layout_width="130dp"
         android:layout_height="130dp"
         android:id="@+id/pay_order_item_img"
         android:background="@drawable/login_wait"
-        app:placeholderImage="@drawable/login_wait"
         fresco:placeholderImage="@drawable/login_wait"
         fresco:placeholderImageScaleType="fitXY"
         android:layout_alignParentTop="true"/>
