--- a/app/src/main/res/layout/order_item.xml
+++ b/app/src/main/res/layout/order_item.xml
@@ -3,8 +3,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
-                xmlns:fresco="http://schemas.android.com/apk/res-auto"
-                xmlns:app="http://schemas.android.com/tools">
+                xmlns:fresco="http://schemas.android.com/apk/res-auto">
     <LinearLayout
         android:id="@+id/order_item_layout_choose"
         android:layout_width="wrap_content"
@@ -29,7 +28,6 @@
         android:layout_height="100dp"
         android:id="@+id/order_item_img"
         android:background="@drawable/login_wait"
-        app:placeholderImage="@drawable/login_wait"
         fresco:placeholderImage="@drawable/login_wait"
         fresco:placeholderImageScaleType="fitXY"
         android:layout_alignParentTop="true"
