--- a/app/src/main/res/layout/dialog_register.xml
+++ b/app/src/main/res/layout/dialog_register.xml
@@ -36,6 +36,8 @@
         android:hint="请再次输入密码"
         android:background="@drawable/select_text"
         android:layout_centerVertical="true"
+        android:singleLine="true"
+        android:maxLength="20"
         android:inputType="textPassword"
         android:layout_marginBottom="5dp"
         android:layout_marginRight="10dp"
@@ -46,6 +48,8 @@
         android:id="@+id/register_psw1"
         android:hint="请输入密码"
         android:inputType="textPassword"
+        android:singleLine="true"
+        android:maxLength="20"
         android:background="@drawable/select_text"
         android:layout_above="@id/register_psw2"
         android:layout_marginBottom="5dp"
@@ -56,6 +60,8 @@
     <EditText
         android:id="@+id/register_name"
         android:hint="请输入账号"
+        android:singleLine="true"
+        android:maxLength="20"
         android:background="@drawable/select_text"
         android:layout_above="@id/register_psw1"
         android:layout_marginBottom="5dp"
