--- a/app/src/main/res/layout/order_has_pay_item_.xml
+++ b/app/src/main/res/layout/order_has_pay_item_.xml
@@ -77,8 +77,12 @@
                 android:text="title"
                 android:layout_weight="1"
                 android:textSize="18sp"
-                android:maxLines="2"
-                android:ellipsize="end"
+                android:singleLine="true"
+                android:ellipsize="marquee"
+                android:focusable="true"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:focusableInTouchMode="true"
+                android:scrollHorizontally="true"
                 android:textStyle="bold"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"/>
