--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -48,16 +48,17 @@
             android:layout_height="wrap_content">
             <TextView
                 style="@style/inputTextStyle"
-                android:text="  sign   in   :"
-                android:layout_width="wrap_content"
+                android:text="用户名:"
+                android:gravity="right"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content" />
             <EditText
                 android:id="@+id/login_text_username"
                 style="@style/inputBoxStyle"
                 android:layout_width="0dp"
-                android:digits="1234567890qwertyuiopasdfghjklzxcvbnm"
-                android:hint="@string/login"
-                android:layout_weight="1"
+                android:singleLine="true"
+                android:hint="请输入用户名"
+                android:layout_weight="5"
                 android:layout_height="wrap_content" />
         </LinearLayout>
         <!-- 填写框 密码-->
@@ -67,16 +68,17 @@
             android:layout_height="wrap_content">
             <TextView
                 style="@style/inputTextStyle"
-                android:text="password :"
-                android:layout_width="wrap_content"
+                android:gravity="right"
+                android:text="密码:"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content" />
             <EditText
                 android:id="@+id/login_text_password"
                 style="@style/inputBoxStyle"
-                android:hint="@string/password"
+                android:hint="请输入密码"
                 android:inputType="textPassword"
                 android:layout_width="0dp"
-                android:layout_weight="1"
+                android:layout_weight="5"
                 android:layout_height="wrap_content" />
         </LinearLayout>
         <TextView
