--- a/app/src/main/res/layout/order_item.xml
+++ b/app/src/main/res/layout/order_item.xml
@@ -95,7 +95,7 @@
             android:ellipsize="end"
             android:textStyle="bold"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"/>
+            android:layout_height="wrap_content"/>
         <TextView
             android:layout_weight="2"
             android:layout_width="match_parent"
